--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-milvus-mcp",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "MCP server for Milvus vector database with semantic and full-text search capabilities",
   "type": "module",
   "main": "dist/index.js",
@@ -8,8 +8,7 @@
     "simple-milvus-mcp": "./dist/index.js"
   },
   "files": [
-    "dist/",
-    "node_modules/@zilliz/"
+    "dist/"
   ],
   "scripts": {
     "build": "ncc build src/index.js -o dist --minify --external @zilliz/milvus2-sdk-node",
